Updated some imports

--- a/src/app/category/[id]/meals/page.module.scss
+++ b/src/app/category/[id]/meals/page.module.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	gap: 48px;
 	.title {
-		border-bottom: 2px solid green;
+		border-bottom: 2px solid darkblue;
 		padding-bottom: 4px;
 	}
 	.recipesContainer {
